change package json path

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-firebase-app",
+  "name": "dist/angular-firebase-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
